crates/credential-runtime/tests/compile_fail/raw_store_without_layers.stderr
error[E0624]: associated function `__from_parts` is private
  --> tests/compile_fail/raw_store_without_layers.rs:19:38
   |
19 |       let _bypass = CredentialService::__from_parts;
   |                                        ^^^^^^^^^^^^ private associated function
   |
  ::: src/service.rs
   |
   | /     pub(crate) fn __from_parts(
   | |         store: Arc<dyn DynCredentialStore>,
   | |         scan_store: ErasedCredentialStore,
   | |         resolver: CredentialResolver<ErasedCredentialStore>,
...  |
   | |         source: StateSource,
   | |     ) -> Self {
   | |_____________- private associated function defined here
